# MTGA_Draft_17Lands

./: .gitignore  pyproject.toml
src/: file_extractor.py  overlay.py
